--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <td><img src="images\photo_2022-03-25_23-55-55-modified.9tRI7.png" alt=""></td>
     <td>
       <h1> Konstantino Stroufopoulos </h1>
-      <p><em>Web development <strong>fronted /fullstack </strong></em></p>
+      <p><em><strong> front-end web developer</strong></em></p>
       <br>
       <p> My name is Konstantinos, I'm 27 years old I live in Greece,Athens
         <br>Im a Junior Fronted web Developer
